2003-04-30  Jacob Perkins  <jap1@users.sourceforge.net>

	* libseahorse/seahorse-default-key-control.c: Disconnects context's
	add signal so doesn't crash, bug fix in checking key's type
	* src/seahorse-preferences.c: Improved layout in PGP tab
	* src/seahorse-key-manager: Key buttons & menu items insensitive at start,
	signals are connected before list is loaded so ops can be done

2003-04-29  Jacob Perkins  <jap1@users.sourceforge.net>

	* libseahorse/seahorse-check-button-control: Added
	* libseahorse/seahorse-default-key-control: Added
	* plugins/nautilus/seahorse-pgp-preferences: Uses glade dialog,
	SeahorseCheckButtonControl, and seahorse-default-key-control.
	Added desktop file to install in control-center capplets
	* src/seahorse-preferences: Updated to use SeahorseCheckButtonControl
	and seahorse-default-key-control
	* src/seahorse.desktop.in: Moved from data/
	* BUGS: Added so that users know what is missing atm

2003-04-27  Jacob Perkins  <jap1@users.sourceforge.net>

	* bonobo/Seahorse_PGP_File_Listener.in.in:
	* bonobo/seahorse-pgp-file-listener.c:
	Added, replaces previous component code in plugins/nautilus/
	* plugins/nautilus/seahorse.mime:
	* plugins/nautilus/seahorse.keys:
	Moved from data/
	* libseahorse/seahorse-pgp-controls: Removed since unnecessary,
	need replacement widgets

2003-04-23  Jacob Perkins  <jap1@users.sourceforge.net>

	* src/seahorse-preferences: Uses PGP controls
	* libseahorse/seahorse-pgp-controls: Now all widgets are created,
	properties control their visibility

2003-04-22  Jacob Perkins  <jap1@users.sourceforge.net>

	* libseahorse/seahorse-op.c: Removed ENCRYPTSELF_KEY
	* libseahorse/seahorse-context.h: Added ENCRYPTSELF_KEY
	* configure.in: Added bonobo dependencies
	* libseahorse/Seahorse_PGP_Controls.server.in.in:
	* libseahorse/seahorse-pgp-controls:
	* plugins/nautilus/seahorse-pgp-preferences:
	Added

2003-04-19  Jacob Perkins  <jap1@users.sourceforge.net>
