@@ -16,7 +16,7 @@ int
 main (int argc, char **argv)
 {
 	SeahorseWidget *swidget;
-	GtkWidget *table, *label, *widget;
+	GtkWidget *table, *label, *widget, *control;
 	SeahorseContext *sctx;
 
 #ifdef ENABLE_NLS
@@ -32,25 +32,31 @@ main (int argc, char **argv)
 	sctx = seahorse_context_new ();
 	swidget = seahorse_widget_new ("pgp-preferences", sctx);
 	
-	table = gtk_table_new (2, 3, FALSE);
-	gtk_table_set_row_spacings (GTK_TABLE (table), 12);
-	gtk_table_set_col_spacings (GTK_TABLE (table), 12);
+	table = gtk_vbox_new (FALSE, 12);
 	gtk_container_set_border_width (GTK_CONTAINER (table), 12);
 	gtk_container_add (GTK_CONTAINER (glade_xml_get_widget (swidget->xml, "vbox")), table);
 	
-	gtk_table_attach (GTK_TABLE (table), seahorse_check_button_control_new (_("_Ascii Armor"),
-		ARMOR_KEY), 0, 1, 0, 1, GTK_FILL, 0, 0, 0);
-	gtk_table_attach (GTK_TABLE (table), seahorse_check_button_control_new (_("_Text Mode"),
-		TEXTMODE_KEY), 1, 2, 0, 1, GTK_FILL, 0, 0, 0);
-	gtk_table_attach (GTK_TABLE (table), seahorse_check_button_control_new (_("_Encrypt to Self"),
-		ENCRYPTSELF_KEY), 2, 3, 0, 1, GTK_FILL, 0, 0, 0);
+	widget = gtk_table_new (1, 3, FALSE);
+	gtk_table_set_row_spacings (GTK_TABLE (widget), 12);
+	gtk_table_set_col_spacings (GTK_TABLE (widget), 12);
+	gtk_container_add (GTK_CONTAINER (table), widget);
+	
+	gtk_table_attach (GTK_TABLE (widget), seahorse_check_button_control_new (
+		_("_Ascii Armor"), ARMOR_KEY), 0, 1, 0, 1, GTK_FILL, 0, 0, 0);
+	gtk_table_attach (GTK_TABLE (widget), seahorse_check_button_control_new (
+		_("_Text Mode"), TEXTMODE_KEY), 1, 2, 0, 1, GTK_FILL, 0, 0, 0);
+	gtk_table_attach (GTK_TABLE (widget), seahorse_check_button_control_new (
+		_("_Encrypt to Self"), ENCRYPTSELF_KEY), 2, 3, 0, 1, GTK_FILL, 0, 0, 0);
+		
+	widget = gtk_hbox_new (FALSE, 12);
+	gtk_container_add (GTK_CONTAINER (table), widget);
 	
 	label = gtk_label_new_with_mnemonic (_("_Default Key:"));
-	gtk_table_attach (GTK_TABLE (table), label, 0, 1, 1, 2, GTK_FILL, 0, 0, 0);
+	gtk_container_add (GTK_CONTAINER (widget), label);
 	
-	widget = seahorse_default_key_control_new (sctx);
-	gtk_label_set_mnemonic_widget (GTK_LABEL (label), widget);
-	gtk_table_attach (GTK_TABLE (table), widget, 1, 3, 1, 2, GTK_FILL, 0, 0, 0);
+	control = seahorse_default_key_control_new (sctx);
+	gtk_label_set_mnemonic_widget (GTK_LABEL (label), control);
+	gtk_container_add (GTK_CONTAINER (widget), control);
 	
 	gtk_widget_show_all (table);
 	g_signal_connect (GTK_OBJECT (table), "destroy", G_CALLBACK (destroyed), NULL);
