@@ -5,6 +5,7 @@
 	* src/seahorse-preferences.c: Improved layout in PGP tab
 	* src/seahorse-key-manager: Key buttons & menu items insensitive at start,
 	signals are connected before list is loaded so ops can be done
+	* plugins/nautilus/seahorse-pgp-preferences: Made layout nicer
 
 2003-04-29  Jacob Perkins  <jap1@users.sourceforge.net>
 
